--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -7,7 +7,7 @@
       <%= link_to @prototype.user.name, "/users/#{@prototype.user.id}", class: :prototype__user %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %>
+          <%= link_to "編集する", edit_prototype_path, class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype.id), class: :prototype__btn, method: :delete %>
         </div>
       <% end %>
@@ -30,7 +30,7 @@
       </div>
       <div class="prototype__comments">
         <% if current_user %>
-          <%= form_with(model: [@prototype, @comment], local: true) do |f|%>
+          <%= form_with model: [@prototype, @comment], local: true do |f| %>
             <div class="field">
               <%= f.label :text, "コメント" %><br />
               <%= f.text_field :text %>
@@ -45,7 +45,7 @@
             <% @comments.each do |comment| %>
               <li class="comments_list">
                 <%= comment.text %>
-                <%= link_to comment.user.name, "/users/#{comment.user.id}", class: :comment_user %>
+                <%= link_to "(#{comment.user.name})", user_path(comment.user), class: :comment_user %>
               </li>
             <% end %>
           <% end %>
